--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,1 +1,14 @@
-{ "recommendations": ["expo.vscode-expo-tools"] }
+{
+  "recommendations": [
+    "expo.vscode-expo-tools",
+    "dsznajder.es7-react-js-snippets",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "usernamehw.errorlens",
+    "formulahendry.auto-rename-tag",
+    "christian-kohler.path-intellisense",
+    "eamodio.gitlens",
+    "pkief.material-icon-theme",
+    "msjsdiag.vscode-react-native"
+  ]
+}
