--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,43 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
 node_modules/
-
-# Expo
 .expo/
 dist/
-web-build/
-expo-env.d.ts
-
-# Native
-.kotlin/
-*.orig.*
+npm-debug.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+*.orig.*
+web-build/
+# expo router
+expo-env.d.ts
 
-# Metro
-.metro-health-check*
+# env and cursor 
+.env
+.env.local
+.env.*
+.cursor/
+.qodo/
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# ios and android
+ios
+android
 
 # macOS
 .DS_Store
-*.pem
 
-# local env files
-.env*.local
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
 
-# typescript
-*.tsbuildinfo
+# iOS
+ios/
 
-app-example
+# Android
+android/
 
-# generated native folders
-/ios
-/android
+# Windows
+Windows/
+
+# Linux
+Linux/
+node_modules
