--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,19 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~assets/*": ["./assets/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "~assets/*": [
+        "./assets/*"
+      ]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
