--- a/package.json
+++ b/package.json
@@ -16,34 +16,48 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@rn-primitives/accordion": "^1.2.0",
-    "@rn-primitives/alert-dialog": "^1.2.0",
-    "@rn-primitives/checkbox": "^1.2.0",
-    "@rn-primitives/collapsible": "^1.2.0",
-    "@rn-primitives/context-menu": "^1.2.0",
-    "@rn-primitives/dialog": "^1.2.0",
-    "@rn-primitives/dropdown-menu": "^1.2.0",
-    "@rn-primitives/hover-card": "^1.2.0",
-    "@rn-primitives/label": "^1.2.0",
-    "@rn-primitives/menubar": "^1.2.0",
-    "@rn-primitives/popover": "^1.2.0",
-    "@rn-primitives/portal": "^1.3.0",
-    "@rn-primitives/progress": "^1.2.0",
-    "@rn-primitives/radio-group": "^1.2.0",
-    "@rn-primitives/select": "^1.2.0",
-    "@rn-primitives/separator": "^1.2.0",
-    "@rn-primitives/slot": "^1.2.0",
-    "@rn-primitives/switch": "^1.2.0",
-    "@rn-primitives/tabs": "^1.2.0",
-    "@rn-primitives/toggle": "^1.2.0",
-    "@rn-primitives/toggle-group": "^1.2.0",
-    "@rn-primitives/tooltip": "^1.2.0",
     "@supabase/supabase-js": "^2.93.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@tamagui/accordion": "^2.0.0-rc.1",
+    "@tamagui/alert-dialog": "^2.0.0-rc.1",
+    "@tamagui/animate-presence": "^2.0.0-rc.1",
+    "@tamagui/animations-css": "^2.0.0-rc.1",
+    "@tamagui/animations-motion": "^2.0.0-rc.1",
+    "@tamagui/animations-react-native": "2.0.0-rc.1",
+    "@tamagui/animations-reanimated": "^2.0.0-rc.1",
+    "@tamagui/avatar": "^2.0.0-rc.1",
+    "@tamagui/card": "^2.0.0-rc.1",
+    "@tamagui/config": "2.0.0-rc.1",
+    "@tamagui/context-menu": "^2.0.0-rc.1",
+    "@tamagui/core": "2.0.0-rc.1",
+    "@tamagui/dialog": "^2.0.0-rc.1",
+    "@tamagui/elements": "^2.0.0-rc.1",
+    "@tamagui/focus-scope": "^2.0.0-rc.1",
+    "@tamagui/font-inter": "2.0.0-rc.1",
+    "@tamagui/group": "^2.0.0-rc.1",
+    "@tamagui/image": "^2.0.0-rc.1",
+    "@tamagui/linear-gradient": "^2.0.0-rc.1",
+    "@tamagui/list-item": "^2.0.0-rc.1",
+    "@tamagui/lucide-icons": "^2.0.0-rc.1",
+    "@tamagui/menu": "^2.0.0-rc.1",
+    "@tamagui/native": "^2.0.0-rc.1",
+    "@tamagui/popover": "^2.0.0-rc.1",
+    "@tamagui/portal": "^2.0.0-rc.1",
+    "@tamagui/roving-focus": "^2.0.0-rc.1",
+    "@tamagui/scroll-view": "^2.0.0-rc.1",
+    "@tamagui/separator": "^2.0.0-rc.1",
+    "@tamagui/shapes": "^2.0.0-rc.1",
+    "@tamagui/sheet": "^2.0.0-rc.1",
+    "@tamagui/shorthands": "2.0.0-rc.1",
+    "@tamagui/stacks": "^2.0.0-rc.1",
+    "@tamagui/tabs": "^2.0.0-rc.1",
+    "@tamagui/text": "^2.0.0-rc.1",
+    "@tamagui/themes": "2.0.0-rc.1",
+    "@tamagui/visually-hidden": "^2.0.0-rc.1",
+    "burnt": "^0.13.0",
     "expo": "~54.0.32",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
@@ -57,24 +71,28 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "lucide-react-native": "^0.563.0",
-    "nativewind": "^4.2.1",
+    "motion": "^12.31.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-ios-context-menu": "^3.1.0",
+    "react-native-ios-utilities": "^5.1.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.2",
+    "react-native-teleport": "^1.0.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tamagui": "2.0.0-rc.1",
+    "zeego": "^3.0.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@tamagui/babel-plugin": "2.0.0-rc.1",
     "@types/react": "~19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
@@ -84,7 +102,6 @@
     "glob": "^10.5.0",
     "prettier": "^3.8.1",
     "rimraf": "^4.4.1",
-    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
   },
   "private": true
